notion-tui/crates/notion-tui/tests/snapshots/render_smoke__renders_frame_with_status_bar.snap
---
source: crates/notion-tui/tests/render_smoke.rs
assertion_line: 18
expression: term.backend()
---
"┌ notion ● ────────────────┐┌──────────────────────────────┐"
"│first sync in progress…   ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"└──────────────────────────┘└──────────────────────────────┘"
"✓ synced                                                    "
