notion-tui/crates/notion-tui/tests/snapshots/render_smoke__renders_page_view.snap
---
source: crates/notion-tui/tests/render_smoke.rs
assertion_line: 86
expression: term.backend()
---
"┌ notion ──────────────────┐┌ Roadmap ─────────────────────┐"
"│                          ││# Q3 Plan                     │"
"│                          ││[ ] Ship it                   │"
"│                          ││→ Sub page                    │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"└──────────────────────────┘└──────────────────────────────┘"
"✓ synced                                                    "
