notion-tui/crates/notion-tui/tests/snapshots/render_smoke__renders_sidebar_tree.snap
---
source: crates/notion-tui/tests/render_smoke.rs
assertion_line: 43
expression: term.backend()
---
"┌ notion ● ────────────────┐┌──────────────────────────────┐"
"│▸ Roadmap                 ││                              │"
"│▸ Notes                   ││                              │"
"│▦ Tasks                   ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"│                          ││                              │"
"└──────────────────────────┘└──────────────────────────────┘"
"✓ synced                                                    "
